--- a/EAN-pure-active-fluid/style.css
+++ b/EAN-pure-active-fluid/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;600;800&display=swap');
 html,
 body {
   margin: 0;
@@ -10,7 +10,7 @@ body {
 }
 
 #es-garnier.es-garnier {
-  font-family: "Montserrat", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Montserrat', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.2;
@@ -46,7 +46,7 @@ body {
 #es-garnier.es-garnier h3,
 #es-garnier.es-garnier h4,
 #es-garnier.es-garnier h5 {
-  font-family: "Montserrat", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: 'Montserrat', Tahoma, Geneva, Verdana, sans-serif;
   color: #111;
 }
 #es-garnier.es-garnier .es-kv {
@@ -102,7 +102,7 @@ body {
 }
 #es-garnier.es-garnier .es-kv__subtitle::before {
   position: absolute;
-  content: url("./images/point.webp");
+  content: url('./images/point.webp');
   width: 1px;
   height: 1px;
   top: -3px;
@@ -149,8 +149,8 @@ body {
 }
 #es-garnier.es-garnier .es-kv__label::before {
   position: absolute;
-  content: "";
-  background: url("./images/label-bracket.webp") no-repeat;
+  content: '';
+  background: url('./images/label-bracket.webp') no-repeat;
   width: 25px;
   height: 125px;
   left: 0;
@@ -158,8 +158,8 @@ body {
 }
 #es-garnier.es-garnier .es-kv__label::after {
   position: absolute;
-  content: "";
-  background: url("./images/label-bracket.webp") no-repeat;
+  content: '';
+  background: url('./images/label-bracket.webp') no-repeat;
   transform: rotate(180deg);
   width: 25px;
   height: 125px;
@@ -171,7 +171,8 @@ body {
   padding: 0;
   position: relative;
 }
-#es-garnier.es-garnier .es-kv__accent2::before, #es-garnier.es-garnier .es-kv__accent2::after {
+#es-garnier.es-garnier .es-kv__accent2::before,
+#es-garnier.es-garnier .es-kv__accent2::after {
   content: url(./images/square\ bracket\ open.webp);
   color: #e75e1c;
   position: absolute;
@@ -211,7 +212,8 @@ body {
   #es-garnier.es-garnier .es-kv__label-percent {
     margin-bottom: 0;
   }
-  #es-garnier.es-garnier .es-kv__label::before, #es-garnier.es-garnier .es-kv__label::after {
+  #es-garnier.es-garnier .es-kv__label::before,
+  #es-garnier.es-garnier .es-kv__label::after {
     background-size: 80%;
     height: 100px;
   }
@@ -262,7 +264,7 @@ body {
   margin: 0 auto;
 }
 #es-garnier.es-garnier .es-ingredients__packshot::before {
-  content: "przed";
+  content: 'przed';
   position: absolute;
   bottom: 25%;
   left: 20%;
@@ -273,7 +275,7 @@ body {
   text-align: center;
 }
 #es-garnier.es-garnier .es-ingredients__packshot::after {
-  content: "po";
+  content: 'po';
   position: absolute;
   bottom: 25%;
   right: 25%;
@@ -317,6 +319,7 @@ body {
   font-size: 12px;
   padding-top: 16px;
   text-align: center;
+  font-weight: 600;
 }
 #es-garnier.es-garnier .es-ingredients__title {
   text-transform: uppercase;
@@ -477,8 +480,8 @@ body {
   }
   #es-garnier.es-garnier .es-active-ingredients__item-title--blue::before {
     position: absolute;
-    content: "";
-    background: url("./images/active-bracket-blue-before.webp") no-repeat;
+    content: '';
+    background: url('./images/active-bracket-blue-before.webp') no-repeat;
     display: block;
     top: -15px;
     left: -20px;
@@ -489,8 +492,8 @@ body {
   }
   #es-garnier.es-garnier .es-active-ingredients__item-title--blue::after {
     position: absolute;
-    content: "";
-    background: url("./images/active-bracket-blue-after.webp") no-repeat;
+    content: '';
+    background: url('./images/active-bracket-blue-after.webp') no-repeat;
     display: block;
     top: -15px;
     right: -45%;
@@ -505,8 +508,8 @@ body {
   }
   #es-garnier.es-garnier .es-active-ingredients__item-title--white::before {
     position: absolute;
-    content: "";
-    background: url("./images/active-bracket-white-before.webp") no-repeat;
+    content: '';
+    background: url('./images/active-bracket-white-before.webp') no-repeat;
     display: block;
     top: -6px;
     right: 49%;
@@ -517,8 +520,8 @@ body {
   }
   #es-garnier.es-garnier .es-active-ingredients__item-title--white::after {
     position: absolute;
-    content: "";
-    background: url("./images/active-bracket-white-after.webp") no-repeat;
+    content: '';
+    background: url('./images/active-bracket-white-after.webp') no-repeat;
     display: block;
     top: -6px;
     right: -14%;
@@ -729,7 +732,13 @@ body {
   background-color: #fff;
 }
 #es-garnier.es-garnier .es-routine__step-compare {
-  background: linear-gradient(to right, #85cfec 0%, #85cfec 50%, #fee955 50%, #fee955 100%);
+  background: linear-gradient(
+    to right,
+    #85cfec 0%,
+    #85cfec 50%,
+    #fee955 50%,
+    #fee955 100%
+  );
 }
 #es-garnier.es-garnier .es-routine__step-group {
   display: flex;
@@ -760,7 +769,13 @@ body {
 }
 @media screen and (min-width: 998px) {
   #es-garnier.es-garnier .es-routine__steps {
-    background: linear-gradient(to right, #85cfec 0%, #85cfec 50%, #fee955 50%, #fee955 100%);
+    background: linear-gradient(
+      to right,
+      #85cfec 0%,
+      #85cfec 50%,
+      #fee955 50%,
+      #fee955 100%
+    );
   }
 }
 #es-garnier.es-garnier .es-cross {
@@ -932,10 +947,20 @@ body {
   margin: 0 auto;
   transition: all 0.3s ease-in-out;
 }
-#es-garnier.es-garnier .es-cross .swiper-cross-button-prev:after, #es-garnier.es-garnier .es-cross .es-cross .swiper-container-rtl .swiper-cross-button-next:after {
+#es-garnier.es-garnier .es-cross .swiper-cross-button-prev:after,
+#es-garnier.es-garnier
+  .es-cross
+  .es-cross
+  .swiper-container-rtl
+  .swiper-cross-button-next:after {
   display: none;
 }
-#es-garnier.es-garnier .es-cross .swiper-cross-button-next:after, #es-garnier.es-garnier .es-cross .es-cross .swiper-container-rtl .swiper-cross-button-prev:after {
+#es-garnier.es-garnier .es-cross .swiper-cross-button-next:after,
+#es-garnier.es-garnier
+  .es-cross
+  .es-cross
+  .swiper-container-rtl
+  .swiper-cross-button-prev:after {
   display: none;
 }
 #es-garnier.es-garnier .es-cross__disclaimer {
@@ -944,11 +969,21 @@ body {
   text-align: center;
   margin: 50px auto;
 }
-#es-garnier.es-garnier .es-cross .swiper-cross-button-next, #es-garnier.es-garnier .es-cross .es-cross .swiper-container-rtl .swiper-cross-button-prev {
+#es-garnier.es-garnier .es-cross .swiper-cross-button-next,
+#es-garnier.es-garnier
+  .es-cross
+  .es-cross
+  .swiper-container-rtl
+  .swiper-cross-button-prev {
   right: -12px;
   left: auto;
 }
-#es-garnier.es-garnier .es-cross .swiper-cross-button-prev, #es-garnier.es-garnier .es-cross .es-cross .swiper-container-rtl .swiper-cross-button-next {
+#es-garnier.es-garnier .es-cross .swiper-cross-button-prev,
+#es-garnier.es-garnier
+  .es-cross
+  .es-cross
+  .swiper-container-rtl
+  .swiper-cross-button-next {
   left: -12px;
   right: auto;
 }
@@ -1038,7 +1073,8 @@ body {
   #es-garnier.es-garnier .es-cross {
     margin: 0 auto;
   }
-  #es-garnier.es-garnier .es-cross__slider, #es-garnier.es-garnier .es-cross__pagination {
+  #es-garnier.es-garnier .es-cross__slider,
+  #es-garnier.es-garnier .es-cross__pagination {
     display: none;
   }
   #es-garnier.es-garnier .es-cross__wrapper {
@@ -1147,14 +1183,15 @@ body {
   #es-garnier.es-garnier .es-ingredients__content-title span {
     font-size: 25px;
   }
-  #es-garnier.es-garnier .es-ingredients__wrapper, #es-garnier.es-garnier .es-ingredients__content {
+  #es-garnier.es-garnier .es-ingredients__wrapper,
+  #es-garnier.es-garnier .es-ingredients__content {
     flex: 1;
   }
   #es-garnier.es-garnier .es-ingredients__cards {
     margin: 0;
     margin-top: -150px;
     margin-left: -50px;
-    background: url("./images/bg-ingr.webp") no-repeat 10px center;
+    background: url('./images/bg-ingr.webp') no-repeat 10px center;
     background-size: 90%;
     z-index: 10;
   }
@@ -1195,9 +1232,9 @@ body {
     align-items: flex-start;
   }
   #es-garnier.es-garnier .es-cross__steps-item--1::after {
-    content: "";
+    content: '';
     position: absolute;
-    background: url("./images/steps-line.webp") no-repeat center;
+    background: url('./images/steps-line.webp') no-repeat center;
     width: 260px;
     height: 2px;
     bottom: 0;
@@ -1207,9 +1244,9 @@ body {
     order: 3;
   }
   #es-garnier.es-garnier .es-cross__steps-item--2::after {
-    content: "";
+    content: '';
     position: absolute;
-    background: url("./images/steps-line.webp") no-repeat center;
+    background: url('./images/steps-line.webp') no-repeat center;
     width: 500px;
     height: 2px;
     bottom: 0;
@@ -1219,9 +1256,9 @@ body {
     order: 4;
   }
   #es-garnier.es-garnier .es-cross__steps-item--3::after {
-    content: "";
+    content: '';
     position: absolute;
-    background: url("./images/steps-line.webp") no-repeat center;
+    background: url('./images/steps-line.webp') no-repeat center;
     width: 330px;
     height: 2px;
     bottom: 0;
@@ -1231,9 +1268,9 @@ body {
     order: 2;
   }
   #es-garnier.es-garnier .es-cross__steps-item--4::after {
-    content: "";
+    content: '';
     position: absolute;
-    background: url("./images/steps-line.webp") no-repeat center;
+    background: url('./images/steps-line.webp') no-repeat center;
     width: 275px;
     height: 2px;
     bottom: 0;
@@ -1264,11 +1301,11 @@ body {
     transform: translateY(-50%);
   }
   #es-garnier.es-garnier .es-info__icon--1::before {
-    content: url("./images/line-1.webp");
+    content: url('./images/line-1.webp');
     left: -124px;
   }
   #es-garnier.es-garnier .es-info__icon--3::before {
-    content: url("./images/line-1.webp");
+    content: url('./images/line-1.webp');
     left: -124px;
   }
   #es-garnier.es-garnier .es-color {
@@ -1278,7 +1315,7 @@ body {
   }
   #es-garnier.es-garnier .es-color::after {
     position: absolute;
-    content: "";
+    content: '';
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -1291,26 +1328,27 @@ body {
   #es-garnier.es-garnier .es-color__left {
     width: 500px;
   }
-  #es-garnier.es-garnier .es-color__left, #es-garnier.es-garnier .es-color__right {
+  #es-garnier.es-garnier .es-color__left,
+  #es-garnier.es-garnier .es-color__right {
     z-index: 2;
   }
   #es-garnier.es-garnier .es-color__pseudo {
     position: relative;
   }
   #es-garnier.es-garnier .es-color__pseudo::before {
-    content: "";
+    content: '';
     display: block;
     position: absolute;
     width: 110px;
     height: 100%;
-    background-image: url("./images/eclipse-left.webp");
+    background-image: url('./images/eclipse-left.webp');
     background-repeat: no-repeat;
     background-size: 100%;
     top: -30px;
     left: 0;
   }
   #es-garnier.es-garnier .es-color__pseudo::after {
-    content: "";
+    content: '';
     display: block;
     position: absolute;
     width: 256px;
@@ -1365,15 +1403,24 @@ body {
   max-width: 80%;
 }
 
-#es-garnier.es-garnier .es-cross__slider .es-cross__product:hover .es-cross__img {
+#es-garnier.es-garnier
+  .es-cross__slider
+  .es-cross__product:hover
+  .es-cross__img {
   transform: scale(1.025);
 }
 
-#es-garnier.es-garnier .es-cross__slider .es-cross__product:hover .es-cross__link {
+#es-garnier.es-garnier
+  .es-cross__slider
+  .es-cross__product:hover
+  .es-cross__link {
   background: #f47435;
 }
 
-#es-garnier.es-garnier .es-cross .swiper-container-horizontal > .swiper-pagination-bullets,
+#es-garnier.es-garnier
+  .es-cross
+  .swiper-container-horizontal
+  > .swiper-pagination-bullets,
 #es-garnier.es-garnier .es-cross .swiper-pagination-custom,
 #es-garnier.es-garnier .es-cross .swiper-pagination-fraction {
   bottom: 0px;
@@ -1404,4 +1451,4 @@ body {
 #es-garnier.es-garnier .es-cross .swiper-pagination-bullet-active {
   opacity: 1;
   background: #000;
-}/*# sourceMappingURL=style.css.map */
+} /*# sourceMappingURL=style.css.map */
